--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen (CLI).xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen (CLI).xcscheme
@@ -9,14 +9,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "09C7B2D01BCC382800D7F488"
-               BuildableName = "swiftgen-cli"
-               BlueprintName = "swiftgen-cli"
+               BlueprintIdentifier = "09A87B401BCC9B8000D9B9F5"
+               BuildableName = "swiftgen"
+               BlueprintName = "swiftgen"
                ReferencedContainer = "container:SwiftGen.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,13 +28,23 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "09A87B4F1BCCA2C600D9B9F5"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:SwiftGen.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "09C7B2D01BCC382800D7F488"
-            BuildableName = "swiftgen-cli"
-            BlueprintName = "swiftgen-cli"
+            BlueprintIdentifier = "09A87B401BCC9B8000D9B9F5"
+            BuildableName = "swiftgen"
+            BlueprintName = "swiftgen"
             ReferencedContainer = "container:SwiftGen.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -51,16 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "09C7B2D01BCC382800D7F488"
-            BuildableName = "swiftgen-cli"
-            BlueprintName = "swiftgen-cli"
+            BlueprintIdentifier = "09A87B401BCC9B8000D9B9F5"
+            BuildableName = "swiftgen"
+            BlueprintName = "swiftgen"
             ReferencedContainer = "container:SwiftGen.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +79,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "09C7B2D01BCC382800D7F488"
-            BuildableName = "swiftgen-cli"
-            BlueprintName = "swiftgen-cli"
+            BlueprintIdentifier = "09A87B401BCC9B8000D9B9F5"
+            BuildableName = "swiftgen"
+            BlueprintName = "swiftgen"
             ReferencedContainer = "container:SwiftGen.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
