--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,7 @@
 disabled_rules: # rule identifiers to exclude from running
   - force_try
   - force_cast
+  - variable_name 
+
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
