--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ osx_image: xcode7
 # - pod install --project-directory=Example
 
 install:
-- gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+ - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+ - scripts/install_swiftlint.sh
 
 script:
-- set -o pipefail && rake tests | xcpretty -c
-- pod lib lint --quick GenumKit/GenumKit.podspec
+# - scripts/swiftlint.sh
+# - scripts/check_templates.sh
+ - set -o pipefail && rake tests | xcpretty -c
+ - pod lib lint --quick GenumKit/GenumKit.podspec
