--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode7
+osx_image: xcode7.3
 
 # cache: cocoapods
 # podfile: Example/Podfile
@@ -12,8 +12,8 @@ install:
  - scripts/install_swiftlint.sh
 
 script:
-# - scripts/swiftlint-code.sh
-# - scripts/swiftlint-templates.sh
-# - scripts/check_templates.sh
- - set -o pipefail && rake tests | xcpretty -c
+# - PROJECT_DIR=. scripts/swiftlint-code.sh
+ - rake tests
+# - PROJECT_DIR=. scripts/swiftlint-templates.sh
+# - PROJECT_DIR=. scripts/check_templates.sh
  - pod lib lint --quick GenumKit/GenumKit.podspec
