--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode7.3
+osx_image: xcode8
 
 # cache: cocoapods
 # podfile: Example/Podfile
@@ -8,6 +8,7 @@ osx_image: xcode7.3
 # - pod install --project-directory=Example
 
 install:
+ - gem install cocoapods --pre # 1.1.0.rc.2 is required
  - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
  - scripts/install_swiftlint.sh
 
