Pin dependencies not to accidentaly update to versions those are not compatible with Swift 2.3
- Commander 0.5.0 is for Swift 3
- PathKit 0.7.0 is for Swift 3
- Stencil 0.6.0 is for Swift 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
  - rake tests
 # - PROJECT_DIR=. scripts/swiftlint-templates.sh
 # - PROJECT_DIR=. scripts/check_templates.sh
- - pod lib lint --quick GenumKit/GenumKit.podspec
+ - pod lib lint GenumKit/GenumKit.podspec
