--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: objective-c
-osx_image: xcode8
+
+matrix:
+  include:
+    - osx_image: xcode7.3
+    - osx_image: xcode8
 
 # cache: cocoapods
 # podfile: Example/Podfile
