--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: objective-c
-osx_image: xcode7.3
 
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+matrix:
+  include:
+    - osx_image: xcode8
 
 install:
+ - gem install cocoapods
  - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
  - scripts/install_swiftlint.sh
 
@@ -16,4 +14,4 @@ script:
  - rake tests
 # - PROJECT_DIR=. scripts/swiftlint-templates.sh
 # - PROJECT_DIR=. scripts/check_templates.sh
- - pod lib lint --quick GenumKit/GenumKit.podspec
+ - pod lib lint GenumKit/GenumKit.podspec
