--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 
 matrix:
   include:
-    - osx_image: xcode8
+    - osx_image: xcode8.1
 
 install:
  - gem install cocoapods
@@ -14,4 +14,4 @@ script:
  - rake tests
 # - PROJECT_DIR=. scripts/swiftlint-templates.sh
 # - PROJECT_DIR=. scripts/check_templates.sh
- - pod lib lint GenumKit/GenumKit.podspec
+ - pod lib lint GenumKit/GenumKit.podspec --quick
