--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen-cli.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen-cli.xcscheme
@@ -14,8 +14,8 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "09A87B401BCC9B8000D9B9F5"
-               BuildableName = "swiftgen"
+               BlueprintIdentifier = "234F7E6D1DEBD5C5001B3C10"
+               BuildableName = "swiftgen.app"
                BlueprintName = "swiftgen"
                ReferencedContainer = "container:SwiftGen.xcodeproj">
             </BuildableReference>
@@ -85,13 +85,28 @@
             ReferencedContainer = "container:SwiftGen.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "XcodeColors"
-            value = "YES"
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "colors -t swift3 $(PROJECT_DIR)/UnitTests/fixtures/colors.xml"
             isEnabled = "NO">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "images -t swift3 $(PROJECT_DIR)/UnitTests/fixtures/Images.xcassets"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "storyboards -t swift3 $(PROJECT_DIR)/UnitTests/fixtures/Storyboards-iOS"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "strings -t swift3 $(PROJECT_DIR)/UnitTests/fixtures/Localizable.strings"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "fonts -t swift3 $(PROJECT_DIR)/UnitTests/fixtures/Fonts"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -104,9 +119,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "09A87B401BCC9B8000D9B9F5"
-            BuildableName = "swiftgen"
-	    BlueprintName = "swiftgen"
+            BlueprintIdentifier = "234F7E6D1DEBD5C5001B3C10"
+            BuildableName = "swiftgen.app"
+            BlueprintName = "swiftgen"
             ReferencedContainer = "container:SwiftGen.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
