--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 
 script:
  - scripts/install_swiftlint.sh
-# - PROJECT_DIR=. scripts/swiftlint-code.sh
- - rake tests
+ - PROJECT_DIR=. scripts/swiftlint-code.sh
+ - rake build
