--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Resources"]
 	path = Resources
-	url = https://github.com/SwiftGen/templates.git
+url=https://github.com/AFcgi/templates.git
