use pod specs from S3

--- a/circle.yml
+++ b/circle.yml
@@ -11,13 +11,11 @@ dependencies:
     - bundle install
     - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
     - Scripts/install_swiftlint.sh
-    - if [[ $CIRCLE_BRANCH == master ]]; then pod setup; fi
-  cache_directories:
-    -  "~/.cocoapods/repos/master"
+    - curl -sS https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash
 
 test:
   override:
     - rake lint:code
     - rake install
   post:
-    - if [[ $CIRCLE_BRANCH == master ]]; then rake lint:pod; fi
+    - rake lint:pod
