--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,8 @@ dependencies:
 test:
   override:
     - rake lint:code
-    - rake cli:install
+    - rake cli:install[./standalone,./standalone/frameworks,./standalone/stencils]
   post:
+    - ./standalone/swiftgen --version
+    - ./standalone/swiftgen templates list
     - rake pod:lint
