Allowing global inputDir + checking path validity on run + verbose mode

--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
@@ -113,7 +113,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "config run"
+            argument = "config run --verbose --config $(PROJECT_DIR)/Tests/SwiftGenTests/fixtures/swiftgen-2.yml"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
