--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
@@ -113,8 +113,12 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "config run --verbose --config $(PROJECT_DIR)/Tests/SwiftGenTests/fixtures/swiftgen-2.yml"
+            argument = "config lint --config $(PROJECT_DIR)/Tests/SwiftGenTests/fixtures/swiftgen-bad.yml"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "config run --verbose --config $(PROJECT_DIR)/Tests/SwiftGenTests/fixtures/swiftgen-2.yml"
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
