Make one command take multiple sources in swiftgen-2.yml

--- a/Tests/SwiftGenTests/fixtures/swiftgen-2.yml
+++ b/Tests/SwiftGenTests/fixtures/swiftgen-2.yml
@@ -13,3 +13,8 @@ xcassets:
   - sources: XCAssets/Images.xcassets
     templateName: swift3
     output: assets-images.swift
+  - sources:
+      - XCAssets/Colors.xcassets
+      - XCAssets/Images.xcassets
+    templateName: swift3
+    output: assets-all.swift
