Renamed entry key "sources" to "paths"
As we're parsing Resources/Files/Dirs, not "source (code)", so the
name "sources" for that key was confusing.

--- a/Tests/SwiftGenTests/fixtures/swiftgen-1.yml
+++ b/Tests/SwiftGenTests/fixtures/swiftgen-1.yml
@@ -1,6 +1,6 @@
 output_dir: Common/Generated
 strings:
-  sources: Sources1/Folder
+  paths: Sources1/Folder
   templateName: structured-swift3
   output: strings.swift
   params:
