--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ machine:
     version: 9.0
   pre:
     - sudo launchctl load -w /System/Library/LaunchDaemons/com.apple.metadata.mds.plist
+    - mdimport /Applications/Xcode*
 
 checkout:
   post:
