Print full help when no subcommand used but --help flag set
Otherwise the default behavior of commander is that when you invoke

$ swiftgen --help

It will print the help of `swiftgen config run --help`

--- a/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
+++ b/SwiftGen.xcodeproj/xcshareddata/xcschemes/swiftgen.xcscheme
@@ -114,6 +114,10 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "config lint --config $(PROJECT_DIR)/Tests/SwiftGenTests/fixtures/config-missing-paths.yml"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--help"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
