--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
 test:
   override:
     - bundle exec rake lint:code
+    - bundle exec rake lint:tests
     - bundle exec rake cli:install[./standalone,./standalone/frameworks,./standalone/stencils]
   post:
     - ./standalone/swiftgen --version
