--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ test:
   override:
     - bundle exec rake lint:code
     - bundle exec rake lint:tests
+    - bundle exec rake xcode:test
     - bundle exec rake cli:install[./standalone,./standalone/frameworks,./standalone/stencils]
   post:
     - ./standalone/swiftgen --version
