--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 ## Build generated
 build/
 DerivedData/
-Fixtures/stub-env/**/*.swiftmodule
+Tests/Fixtures/stub-env/**/*.swiftmodule
 
 ## Various settings
 *.pbxuser
