--- a/Tests/Fixtures/StencilContexts/Strings/structuredonly.plist
+++ b/Tests/Fixtures/StencilContexts/Strings/structuredonly.plist
@@ -13,6 +13,50 @@
 						<key>children</key>
 						<array>
 							<dict>
+								<key>name</key>
+								<string>USER_PROFILE_SECTION</string>
+								<key>strings</key>
+								<array>
+									<dict>
+										<key>key</key>
+										<string>SETTINGS.USER_PROFILE_SECTION.HEADER_TITLE</string>
+										<key>name</key>
+										<string>HEADER_TITLE</string>
+										<key>translation</key>
+										<string>User Profile Settings</string>
+									</dict>
+								</array>
+							</dict>
+						</array>
+						<key>name</key>
+						<string>SETTINGS</string>
+					</dict>
+					<dict>
+						<key>children</key>
+						<array>
+							<dict>
+								<key>name</key>
+								<string>uSer-proFile-sectioN</string>
+								<key>strings</key>
+								<array>
+									<dict>
+										<key>key</key>
+										<string>seTTings.uSer-proFile-sectioN.footer_text</string>
+										<key>name</key>
+										<string>footer_text</string>
+										<key>translation</key>
+										<string>Here you can change some user profile settings.</string>
+									</dict>
+								</array>
+							</dict>
+						</array>
+						<key>name</key>
+						<string>seTTings</string>
+					</dict>
+					<dict>
+						<key>children</key>
+						<array>
+							<dict>
 								<key>children</key>
 								<array>
 									<dict>
@@ -20,7 +64,7 @@
 										<array>
 											<dict>
 												<key>name</key>
-												<string>Even</string>
+												<string>even</string>
 												<key>strings</key>
 												<array>
 													<dict>
@@ -35,11 +79,11 @@
 											</dict>
 										</array>
 										<key>name</key>
-										<string>Title</string>
+										<string>title</string>
 									</dict>
 								</array>
 								<key>name</key>
-								<string>Navigation_Bar</string>
+								<string>navigation-bar</string>
 								<key>strings</key>
 								<array>
 									<dict>
@@ -54,25 +98,9 @@
 							</dict>
 							<dict>
 								<key>name</key>
-								<string>User_Profile_Section</string>
+								<string>user_profile_section</string>
 								<key>strings</key>
 								<array>
-									<dict>
-										<key>key</key>
-										<string>seTTings.uSer-proFile-sectioN.footer_text</string>
-										<key>name</key>
-										<string>footer_text</string>
-										<key>translation</key>
-										<string>Here you can change some user profile settings.</string>
-									</dict>
-									<dict>
-										<key>key</key>
-										<string>SETTINGS.USER_PROFILE_SECTION.HEADER_TITLE</string>
-										<key>name</key>
-										<string>HEADER_TITLE</string>
-										<key>translation</key>
-										<string>User Profile Settings</string>
-									</dict>
 									<dict>
 										<key>key</key>
 										<string>settings.user_profile_section.points</string>
@@ -90,7 +118,7 @@
 							</dict>
 						</array>
 						<key>name</key>
-						<string>Settings</string>
+						<string>settings</string>
 					</dict>
 				</array>
 			</dict>
