--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
           command: bundle exec rake lint:output
       - *store-artifacts
 
-  test:
+  build-and-test:
     <<: *default-config
     steps:
       - *prepare-storage
@@ -114,9 +114,15 @@ jobs:
 
 workflows:
   version: 2
-  lint-test-checkoutput-checkdeploy:
+  lint-buildandtest-compileoutput-checkdeploy:
     jobs:
+      - build-and-test
       - lint
-      - test
-      - compile-output
-      - check-deploy
+      - compile-output:
+          requires:
+            - build-and-test
+            - lint
+      - check-deploy:
+          requires:
+            - build-and-test
+            - lint
